--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,7 @@ body {
         flex-direction: column;
         justify-content: space-around;
         margin-left: 20px;
+        margin-right: 20px;
     }
 
     .discount__image {
